2008-02-12  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimplanguagestore-parser.c: inverted logic; #ifdef
	is IMO easier to read than #ifndef.

2008-02-12  Tor Lillqvist  <tml@novell.com>

	* app/widgets/gimplanguagestore-parser.c
	(gimp_language_store_populate): Don't use the compile-time paths
	to iso-codes on Windows. Instead assume iso-codes is installed in
	the same location as GIMP. Make sure translated language names are
	in UTF-8 by calling bind_textdomain_codeset().

2008-02-11  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimplanguageentry.[ch]
	* app/widgets/gimptexteditor.c: turned language entry into a widget.

2008-02-11  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptexteditor.c (gimp_text_editor_new): enable
	wrapping so the text doesn't scroll out horizontally.

2008-02-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/pyconsole.py: formatting.

2008-02-11  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpcurve.[ch]: add gimp_curve_get_point().

	* app/gegl/gimpcurvesconfig.c
	* app/widgets/gimpcurveview.c: use it instead of accessing the
	points array directly.

2008-02-11  Sven Neumann  <sven@gimp.org>

	* libgimpthumb/Makefile.am (libgimpthumb_2_0_la_LIBADD):
	explicitly added GLIB_LIBS. Fixes bug #515566.

2008-02-11  Øyvind Kolås  <pippin@gimp.org>

	* app/gegl/gimpoperationtilesource.c: context_id argument was
	removed from the process() call of GeglOperationSource.

2008-02-10  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpeditor.c: add button-relief style property which
	defaults to NONE.

2008-02-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpeditor.c: draw editor buttons without
	relief, see bug #515621.

2008-02-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/ripple.c:  add a "phase shift" control,
	for interactive use only.  Fixes bug #515144.

2008-02-09  Michael Natterer  <mitch@gimp.org>
